# django-boilerplate

./: .dockerignore  .gitignore  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: django.yml
core/: celery.py  settings.py  urls.py
main/: tasks.py  tests.py
