[tool.poetry]
name = "django-boilerplate"
version = "0.1.0"
description = ""
authors = ["Amir Mehr <amir.saiedmehr@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2.9"
psycopg2-binary = "^2.8"
celery = "^5.4.0"
djangorestframework = "^3.15.1"
djangorestframework-simplejwt = "^5.3.1"
django-environ = "^0.11.2"
gevent = "^24.2.1"
drf-yasg = "^1.21.7"
django-celery-beat = "^2.6.0"
django-celery-results = "^2.5.1"
django-filter = "^24.2"
environ = "^1.0"
pre-commit = "^3.7.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.1"
black = "^24.4.0"
pytest = "^8.1.1"

[tool.black]
line_length = 116
target_version = ['py310']

[tool.ruff]
exclude = [
    "venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
]
ignore = []
line-length = 120
select = [
    "E",
    "F",
    "W",
    "I001",
]
src = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
